WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49175
Building for Android generates several compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=49175
Summary
Building for Android generates several compiler warnings
Steve Block
Reported
2010-11-08 07:18:19 PST
These are due to signed/unsigned comparisons, assignment in if statements, braces in logical statements, and redefinition of macros.
Attachments
Patch
(3.86 KB, patch)
2010-11-08 07:46 PST
,
Steve Block
levin
: review+
levin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-11-08 07:46:17 PST
Created
attachment 73239
[details]
Patch
David Levin
Comment 2
2010-11-08 11:21:59 PST
Comment on
attachment 73239
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73239&action=review
Please fix typos in changelog.
> WebCore/ChangeLog:9 > + - PREFIX_FOR_WEBCORE was previously required for STL's algirithm, but is no
typo: algirithm
> WebCore/ChangeLog:15 > + No new tests, fixes compile arnings only.
typo: arnings
Steve Block
Comment 3
2010-11-08 14:52:54 PST
Committed
r71578
: <
http://trac.webkit.org/changeset/71578
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug